--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "Government Digital Service",
   "license": "MIT",
   "dependencies": {
+    "@cdssnc/cds_template_jinja": "0.0.2",
     "babel-core": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "diff-dom": "2.3.1",
     "govuk-elements-sass": "3.1.x",
     "govuk_frontend_toolkit": "7.2.0",
-    "govuk_template_jinja": "0.24.0",
     "gulp": "3.9.1",
     "gulp-add-src": "1.0.0",
     "gulp-babel": "7.0.0",
