--- a/requirements-app.txt
+++ b/requirements-app.txt
@@ -8,9 +8,10 @@ gunicorn==19.7.1  # pyup: ignore, >19.8 breaks eventlet patching
 whitenoise==4.1.2  #manages static assets
 eventlet==0.24.1
 
+python-dotenv==0.10.3
 notifications-python-client==5.3.0
 
 # PaaS
 awscli-cwlogs>=1.4,<1.5
 
-git+https://github.com/alphagov/notifications-utils.git@32.0.1#egg=notifications-utils==32.0.1
+git+https://github.com/cds-snc/notifier-utils.git@34.0.11#egg=notifications-utils==34.0.11
