--- a/package.json
+++ b/package.json
@@ -14,31 +14,26 @@
   "license": "MIT",
   "dependencies": {
     "@cdssnc/cds_template_jinja": "0.0.7",
-    "babel-core": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-preset-es2015": "6.24.1",
-    "diff-dom": "2.3.1",
-    "govuk-elements-sass": "3.1.x",
-    "govuk_frontend_toolkit": "7.2.0",
+    "govuk-elements-sass": "3.1.3",
+    "govuk_frontend_toolkit": "8.2.0",
     "gulp": "3.9.1",
     "gulp-add-src": "1.0.0",
     "gulp-babel": "7.0.0",
     "gulp-base64": "0.1.3",
     "gulp-concat": "2.6.1",
-    "gulp-include": "2.3.1",
-    "gulp-load-plugins": "1.5.0",
-    "gulp-sass": "3.1.0",
-    "gulp-uglify": "3.0.0",
-    "hogan": "1.0.2",
-    "jquery": "1.12.4",
-    "query-command-supported": "1.0.0",
-    "timeago": "1.6.1"
+    "gulp-include": "2.4.1",
+    "gulp-load-plugins": "2.0.1",
+    "gulp-sass": "4.0.2",
+    "gulp-uglify": "3.0.2"
   },
   "devDependencies": {
     "gulp-css-url-adjuster": "0.2.3",
     "gulp-jshint": "2.1.0",
     "gulp-prettyerror": "1.2.1",
-    "gulp-sass-lint": "1.2.0",
-    "jshint": "2.9.5",
+    "gulp-sass-lint": "1.4.0",
+    "jshint": "2.10.2",
     "jshint-stylish": "2.2.1"
   }
 }
