--- a/requirements-app.txt
+++ b/requirements-app.txt
@@ -8,6 +8,8 @@ gunicorn==19.7.1  # pyup: ignore, >19.8 breaks eventlet patching
 whitenoise==4.1.2  #manages static assets
 eventlet==0.24.1
 
+Babel==2.7.0
+Flask-Babel==0.12.2
 python-dotenv==0.10.3
 notifications-python-client==5.3.0
 
