Add secret key for sessions mgmt

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ADMIN_BASE_URL = 'http://localhost:6012'
 ADMIN_CLIENT_SECRET = 'dev-notify-secret-key'
 ADMIN_CLIENT_USER_NAME = 'notify-admin'
+SECRET_KEY='foo'
 
 API_HOST_NAME = 'http://localhost:6011'
 
