--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,17 +34,11 @@ jobs:
         with:
           args: eks --region us-east-1 update-kubeconfig --name notification-alpha-canada-ca
       - name: Build
-        uses: actions/docker/cli@master
-        with:
-          args: build -t ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }} -t ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest -f ci/Dockerfile .
+        run: docker build -t ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }} -t ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest -f ci/Dockerfile .
       - name: Push short
-        uses: actions/docker/cli@master
-        with:
-          args: push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }}
+        run: push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }}
       - name: Push latest
-        uses: actions/docker/cli@master
-        with:
-          args: push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest
+        run: push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest
       - name: Apply
         uses: docker://gcr.io/cdssnc/aws-kubectl:latest
         env:
