--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -36,9 +36,9 @@ jobs:
       - name: Build
         run: docker build -t ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }} -t ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest -f ci/Dockerfile .
       - name: Push short
-        run: push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }}
+        run: docker push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:${{ github.sha }}
       - name: Push latest
-        run: push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest
+        run: docker push ${{ secrets.AWS_REGISTRY }}/notification-canada-ca/document-download-frontend:latest
       - name: Apply
         uses: docker://gcr.io/cdssnc/aws-kubectl:latest
         env:
