--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,45 @@ awscli-cwlogs>=1.4,<1.5
 
 git+https://github.com/cds-snc/notifier-utils.git@39.0.1#egg=notifications-utils==39.0.1
 
+## The following requirements were added by pip freeze:
+awscli==1.18.13
+bleach==3.1.1
+boto3==1.12.13
+botocore==1.15.13
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+dnspython==1.16.0
+docopt==0.6.2
+docutils==0.15.2
+flask-redis==0.4.0
+future==0.18.2
+greenlet==0.4.15
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+jmespath==0.9.5
+MarkupSafe==1.1.1
+mistune==0.8.4
+monotonic==1.5
+orderedset==2.0.1
+phonenumbers==8.10.13
+pyasn1==0.4.8
+PyJWT==1.7.1
+PyPDF2==1.26.0
+python-dateutil==2.8.1
+python-json-logger==0.1.11
+pytz==2019.3
+PyYAML==5.3
+redis==3.4.1
+requests==2.23.0
+rsa==3.4.2
+s3transfer==0.3.3
+six==1.14.0
+smartypants==2.0.1
+statsd==3.3.0
+urllib3==1.25.8
+webencodings==0.5.1
+Werkzeug==1.0.0
+WTForms==2.2.1
