--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-WTF==0.14.3
 
 gunicorn==20.0.4
 whitenoise==4.1.2  #manages static assets
-eventlet==0.25.1
+eventlet==0.28.0
 
 Babel==2.8.0
 Flask-Babel==1.0.0
@@ -17,47 +17,50 @@ notifications-python-client==5.5.1
 # PaaS
 awscli-cwlogs>=1.4,<1.5
 
-git+https://github.com/cds-snc/notifier-utils.git@39.0.1#egg=notifications-utils==39.0.1
+git+https://github.com/cds-snc/notifier-utils.git@43.2.2#egg=notifications-utils
 
 ## The following requirements were added by pip freeze:
-awscli==1.18.13
-bleach==3.1.4
-boto3==1.12.13
-botocore==1.15.13
-certifi==2019.11.28
+awscli==1.18.188
+bleach==3.2.1
+boto3==1.16.28
+botocore==1.19.28
+cachetools==4.1.1
+certifi==2020.12.5
 chardet==3.0.4
-Click==7.0
+click==7.1.2
 colorama==0.4.3
 dnspython==1.16.0
 docopt==0.6.2
 docutils==0.15.2
 flask-redis==0.4.0
 future==0.18.2
-greenlet==0.4.15
-idna==2.9
+greenlet==0.4.17
+idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.1
-jmespath==0.9.5
+Jinja2==2.11.2
+jmespath==0.10.0
 MarkupSafe==1.1.1
 mistune==0.8.4
 monotonic==1.5
-orderedset==2.0.1
-phonenumbers==8.10.13
+orderedset==2.0.3
+packaging==20.7
+phonenumbers==8.12.12
 pyasn1==0.4.8
 PyJWT==1.7.1
+pyparsing==2.4.7
 PyPDF2==1.26.0
 python-dateutil==2.8.1
-python-json-logger==0.1.11
-pytz==2019.3
+python-json-logger==2.0.0
+pytz==2020.4
 PyYAML==5.3.1
-redis==3.4.1
-requests==2.23.0
-rsa==3.4.2
+redis==3.5.3
+requests==2.25.0
+rsa==4.5
 s3transfer==0.3.3
-six==1.14.0
+six==1.15.0
 smartypants==2.0.1
 statsd==3.3.0
-urllib3==1.25.8
+urllib3==1.26.2
 webencodings==0.5.1
-Werkzeug==1.0.0
-WTForms==2.2.1
+Werkzeug==1.0.1
+WTForms==2.3.3
