--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,6 @@
 testpaths = tests
 env =
     FLASK_APP=application.py
-    FLASK_ENV=test
+    NOTIFY_ENVIRONMENT=test
     ADMIN_CLIENT_SECRET=11111111-1111-1111-111111111111
     API_HOST_NAME=http://localhost:6014
