--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -17,6 +17,9 @@ COPY . /app
 RUN set -ex && pip3 install -r requirements.txt
 
 RUN npm install
+
+RUN npm rebuild node-sass
+
 RUN npm run build
 
 ENV PORT=7001
